--- a/control
+++ b/control
@@ -1,12 +1,10 @@
-Package: com.rov3r.scmusicplus
+Package: com.kunihir0.scmusicplus
 Name: SCMusicPlus
-Author: Rov3r
+Author: kunihir0
 Description: Enhance your SoundCloud experience
 Depiction: https://rov3r.github.io/depictions/scmusicplus.html
-SileoDepiction: https://rov3r.github.io/depictions/sileo/scmusicplus.json
-Icon: https://rov3r.github.io/depictions/assets/images/scmusicplus-icon.png
 Depends: mobilesubstrate (>= 0.9.5000)
-Maintainer: Rov3r <rov3rrepo@pm.me>
+Maintainer: kunihir0 <kunihiro@tutanota.com>
 Architecture: iphoneos-arm
 Section: Tweaks
-Version: 24.9.1-3
+Version: 25.0.0
